--- a/index.html
+++ b/index.html
@@ -126,19 +126,51 @@ document.getElementById("callBtn").onclick=()=>{
 location.href="tel:"+d.family;
 };
 
-/* LOCATION BUTTON */
-document.getElementById("locBtn").onclick=()=>{
-navigator.geolocation.getCurrentPosition(pos=>{
-const lat=pos.coords.latitude;
-const lon=pos.coords.longitude;
-const map=`https://maps.google.com/?q=${lat},${lon}`;
-window.open(`https://wa.me/${d.family}?text=🚨 EMERGENCY LOCATION: ${map}`,"_blank");
-});
+/* SEND LOCATION TO WHATSAPP */
+document.getElementById("locBtn").onclick = () => {
+
+if(!d.family){
+alert("Family number not available");
+return;
+}
+
+if(!navigator.geolocation){
+alert("Location not supported");
+return;
+}
+
+navigator.geolocation.getCurrentPosition(
+(position)=>{
+
+const lat = position.coords.latitude;
+const lon = position.coords.longitude;
+
+const mapLink = `https://maps.google.com/?q=${lat},${lon}`;
+
+const message =
+`🚨 EMERGENCY ALERT 🚨
+${d.name} may need help.
+
+Live Location:
+${mapLink}`;
+
+/* open WhatsApp */
+window.open(
+`https://wa.me/${d.family}?text=${encodeURIComponent(message)}`,
+"_blank"
+);
+
+},
+()=>{
+alert("Location permission denied");
+}
+);
+
 };
 
-}
 
 </script>
 
 </body>
 </html>
+
