--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@ cursor:pointer;
 
 /* 🔴 FIREBASE CONFIG */
 const firebaseConfig = {
-  apiKey: "PASTE",
-  authDomain: "PASTE",
-  databaseURL: "PASTE",
-  projectId: "PASTE",
-  storageBucket: "PASTE",
-  messagingSenderId: "PASTE",
-  appId: "PASTE"
+   apiKey: "AIzaSyBFXvSwZSrMbYHQkrge6UyZOv2uxU0VkPA",
+  authDomain: "emergency-qr-b0adf.firebaseapp.com",
+  databaseURL: "https://emergency-qr-b0adf-default-rtdb.asia-southeast1.firebasedatabase.app",
+  projectId: "emergency-qr-b0adf",
+  storageBucket: "emergency-qr-b0adf.firebasestorage.app",
+  messagingSenderId: "326186798135",
+  appId: "1:326186798135:web:21b57be22dff85849303b2"
 };
 
 firebase.initializeApp(firebaseConfig);
@@ -151,3 +151,4 @@ window.open(`https://wa.me/${d.family}?text=${encodeURIComponent(msg)}`,"_blank"
 
 </body>
 </html>
+
